fix bg on mobile

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,12 +1,19 @@
 @import url('https://fonts.googleapis.com/css?family=Indie+Flower|Open+Sans+Condensed:300');
 
 
-body {
-  background: url("/images/background.jpg") no-repeat center center fixed;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;
+body:after{
+      content:"";
+      position:fixed; /* stretch a fixed position to the whole screen */
+      top:0;
+      height:100vh; /* fix for mobile browser address bar appearing disappearing */
+      left:0;
+      right:0;
+      z-index:-1; /* needed to keep in the background */
+      background: url(https://www.w3schools.com/css/trolltunga.jpg) center center;
+      -webkit-background-size: cover;
+      -moz-background-size: cover;
+      -o-background-size: cover;
+      background-size: cover;
 }
 
 .vertical-center {
